srcs/influxdb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: influxdb
  name: influxdb
spec:
  ports:
    - name: influxdb
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  generation: 1
  labels:
    app: influxdb
  name: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb
        imagePullPolicy: Never
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: influxdb-pv
        ports:
        - name: influxdb
          containerPort: 8086
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: influxdb-pv
        persistentVolumeClaim:
          claimName: influxdb-pvc
