srcs/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  backend:
    serviceName: nginx
    servicePort: 80
    #serviceName: influxdb
    #servicePort: 8086
    #    serviceName: grafana
    #servicePort: 3000
